@@ -12,7 +12,10 @@
 #-======================================================================
 
 
-Starter-6.2 	03/05/2017:
+Starter-6.12 	31/08/2017:
+    Add a check for several instances for a server.
+
+Starter-6.11 	03/05/2017:
 	Increase spectrum attributes dim_x
 
 Starter-6.10 	07/12/2016:
